--- a/Cosmic/App/View/base.html
+++ b/Cosmic/App/View/base.html
@@ -1,4 +1,4 @@
-{% extends "permissions.html" %}{% set set_permission = 'homepage' %}{% block base %}{% if load is not defined %}<!DOCTYPE html>
+﻿{% extends "permissions.html" %}{% set set_permission = 'homepage' %}{% block base %}{% if load is not defined %}<!DOCTYPE html>
 <html lang="nl">
 <head>
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -142,7 +142,6 @@
                 <li class="navigation-subitem"><a href="/jobs">{{locale_base.nav_jobs}}</a></li>
                 <li class="navigation-subitem"><a href="/community/photos">{{locale_base.nav_photos}}</a></li>
                 <li class="navigation-subitem"><a href="/community/staff">{{site.shortname}} {{locale_base.nav_staff}}</a></li>
-                <li class="navigation-subitem"><a href="/marketplace">{{locale_base.nav_exchange}}</a></li>
             </ul>
         </li>
 
