--- a/Cosmic/public/assets/css/web.css
+++ b/Cosmic/public/assets/css/web.css
@@ -1,4 +1,4 @@
-openBtn {
+.openBtn {
     background: #f1f1f1;
     border: none;
     padding: 10px 15px;
@@ -12,7 +12,7 @@ openBtn {
 
 .btn-success {
     color: #fff;
-    f background-color: #5cb85c;
+    background-color: #5cb85c;
     border-color: #4cae4c;
 }
 
@@ -31,7 +31,7 @@ openBtn {
     touch-action: manipulation;
     cursor: pointer;
     -webkit-user-select: none;
-    home -moz-user-select: none;
+    -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
     background-image: none;
@@ -1714,19 +1714,7 @@ input:-webkit-autofill {
     background-repeat: no-repeat; 
     border-bottom: 3px solid rgba(8,8,8,.18);
 }
-}
 
-.header-container {
-    text-shadow: 0 1px 0 rgba(0, 0, 0, 0.3);
-    text-align: center;
-    overflow: hidden;
-    position: relative;
-    height: 180px;
-    background: url('../images/web/header/15c59e326599a1_oipjfnhqmlgek.gif') no-repeat center;
-    background-color: #74d8ea;
-    background-repeat: no-repeat;
-    border-bottom: 3px solid rgba(8, 8, 8, 0.18);
-}
 
 .header-container:before {
     background-color: rgba(0, 0, 0, 0.41);
