--- a/Cosmic/App/View/base.html
+++ b/Cosmic/App/View/base.html
@@ -137,7 +137,7 @@
                     <a href="/registration" class="rounded-button white plain">{{locale_base.header_register}}</a>
                     {% else %}
                     <a href="/hotel" class="rounded-button white plain hotel-button">{{locale_base.header_to}} {{site.sitename}}</a>
-                    <button class="rounded-button white plain hotel-button">{{online_count}} {{site.sitename}}'s online</button>
+                    <button class="rounded-button white plain">{{online_count}} {{site.sitename}}'s online</button>
                     {% endif %}
                 </div>
             </div>
