--- a/Cosmic/App/View/Shop/draw.html
+++ b/Cosmic/App/View/Shop/draw.html
@@ -113,7 +113,7 @@
                            <div class="palette-color purple2"></div>
                            <div class="palette-color nude"></div>
                            <div class="palette-color black"></div>
-                           <div class="palette-color transparent"></div>
+                           <div class="palette-color white"></div>
                         </div>
                         <div class="color-input">
                            <div class="color-icon">
