--- a/Cosmic/App/View/configuration.html
+++ b/Cosmic/App/View/configuration.html
@@ -30,6 +30,6 @@ var User = {
 var Configuration = {
     {% if publickey is not empty %}recaptcha_public: "{{publickey}}",{% endif %}
     revision: "{{revision}}2213",
-    cache: "AEEA19MN001B",
+    cache: "AEEA19MN001C",
     debug: {{debug}}
 };
