--- a/Cosmic/App/View/Admin/Management/settings.html
+++ b/Cosmic/App/View/Admin/Management/settings.html
@@ -173,7 +173,7 @@
                                                             <div class="form-group row">
                                                                 <label class="col-lg-3 col-form-label">Max regisratrion IP</label>
                                                                 <div class="col-lg-3">
-                                                                    <input type="number" name="vip_price" value="{{settings.registration_max_ip}}" class="form-control">
+                                                                    <input type="number" name="registration_max_ip" value="{{settings.registration_max_ip}}" class="form-control">
                                                                     <span class="form-text text-muted">Max user registration per IP</span>
                                                                 </div>
                                                             </div>
