--- a/Cosmic/App/View/base.html
+++ b/Cosmic/App/View/base.html
@@ -155,8 +155,8 @@
                     <li class="navigation-subitem"><a href="/articles">{{locale_base.nav_news}}</a></li>
                     <li class="navigation-subitem"><a href="/jobs">{{locale_base.nav_jobs}}</a></li>
                     <li class="navigation-subitem"><a href="/community/photos">{{locale_base.nav_photos}}</a></li>
-                    <li class="navigation-subitem"><a href="/community/staff">{{site.shortname}}
-                            {{locale_base.nav_staff}}</a></li>
+                    <li class="navigation-subitem"><a href="/community/staff">{{site.shortname}} {{locale_base.nav_staff}}</a></li>
+                    <li class="navigation-subitem"><a href="/community/team">{{site.shortname}} {{locale_base.nav_team}}</a></li>
                 </ul>
             </li>
 
