--- a/Cosmic/App/View/Admin/Management/permissions.html
+++ b/Cosmic/App/View/Admin/Management/permissions.html
@@ -78,7 +78,7 @@
           </div>
           <div class="kt-portlet__body kt-portlet__body--fit">
               <!--begin: Datatable -->
-              <div id="kt_datatable_permissions"></div>
+              <div id="kt_datatable_teams"></div>
               <!--end: Datatable -->
           </div>
       </div>
