--- a/Cosmic/App/View/base.html
+++ b/Cosmic/App/View/base.html
@@ -34,11 +34,46 @@
     <link rel="stylesheet" href="/assets/css/web.css?v=1111">
     <link rel="stylesheet" href="/assets/css/web.responsive.css">
 
-    <script src="/assets/js/web/user_settings.js"></script>
-
     <script src="/assets/js/jquery-3.2.1.min.js"></script>
     <script src="/assets/js/jquery.ui.touch-punch.min.js"></script>
     <script src="https://www.google.com/recaptcha/api.js"></script>
+  
+    <script>
+    var Site = {
+        name: "{{site.sitename}}",
+        url: "{{site.domain}}",
+        game_url: "{{site.cpath}}",
+        figure_url: "{{site.fpath}}"
+    }
+
+    {% if player %}
+        var Client = {{client|json_encode(constant('JSON_PRETTY_PRINT'))|raw}}
+    {% endif %}
+
+    {% if player is empty %}
+    var User = {
+        id: 0,
+        username: "",
+        online: 0,
+        is_logged: false,
+        is_staff: false
+    }
+    {% else %}var User = {
+        id: {{player.id}},
+        username: "{{player.username}}",
+        is_logged: true,
+        ticket: "{{player.auth_ticket}}",
+        is_staff: {% if player.rank >= 3 %}true{% else %}false{% endif %}
+
+    };
+    {% endif %}
+
+    var Configuration = {
+        {% if publickey is not empty %}recaptcha_public: "{{publickey}}",{% endif %}
+        revision: "{{revision}}2213",
+        cache: "AEEA19MN001C",
+    }
+    </script>
 </head>
 
 <body class="flex-container flex-direction-column">
