--- a/Cosmic/App/View/Client/client.html
+++ b/Cosmic/App/View/Client/client.html
@@ -22,6 +22,43 @@
     <!-- Scripts -->
     <script src="/assets/js/jquery-3.2.1.min.js?v={{revision}}"></script>
     <script src="/assets/js/jquery-ui.min.js?v={{revision}}"></script>
+  
+    <script>
+    var Site = {
+        name: "{{site.sitename}}",
+        url: "{{site.domain}}",
+        game_url: "{{site.cpath}}",
+        figure_url: "{{site.fpath}}"
+    }
+
+    {% if player %}
+        var Client = {{client|json_encode(constant('JSON_PRETTY_PRINT'))|raw}}
+    {% endif %}
+
+    {% if player is empty %}
+    var User = {
+        id: 0,
+        username: "",
+        online: 0,
+        is_logged: false,
+        is_staff: false
+    }
+    {% else %}var User = {
+        id: {{player.id}},
+        username: "{{player.username}}",
+        is_logged: true,
+        ticket: "{{player.auth_ticket}}",
+        is_staff: {% if player.rank >= 3 %}true{% else %}false{% endif %}
+
+    };
+    {% endif %}
+
+    var Configuration = {
+        {% if publickey is not empty %}recaptcha_public: "{{publickey}}",{% endif %}
+        revision: "{{revision}}2213",
+        cache: "AEEA19MN001C",
+    }
+    </script>
 </head>
 <body>
     <div class="loading-container">
@@ -59,7 +96,6 @@
     </script>
     
     <script src="/assets/js/web/web.locale.js?v={{revision}}"></script>
-    <script src="/assets/js/web/user_settings.js?v={{revision}}"></script>
     <script src="/assets/js/functions.js?v={{revision}}"></script>
     <script src="/assets/js/hotel/swfobject.js?v={{revision}}"></script>
     <script src="/assets/js/jquery.scrollbar.js?v={{revision}}"></script>
