--- a/Cosmic/App/View/Client/client.html
+++ b/Cosmic/App/View/Client/client.html
@@ -1,113 +1,104 @@
-{% if player %}
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE HTML>
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="Content-type" content="text/html; charset=UTF-8">
-  
-    <meta name="robots" content="noindex, nofollow">
-    <title>Hotel - {{site.shortname}}</title>
+    <title>Hotel - {{hotelname}} Hotel</title>
 
-    <!-- CSS -->
-    <link rel="stylesheet" href="/assets/css/flaticon.css?v={{revision}}">
-    <link rel="stylesheet" href="/assets/css/magnific-popup.css?v={{revision}}">
-    <link rel="stylesheet" href="/assets/css/selectric.css?v={{revision}}">
-    <link rel="stylesheet" href="/assets/css/circle.css?v={{revision}}">
-    <link rel="stylesheet" href="/assets/css/web.css?v={{revision}}">
-    <link rel="stylesheet" href="/assets/css/web.responsive.css?v={{revision}}">
-    <link rel="stylesheet" href="/assets/css/nanoscroller.css?v={{revision}}">
-    <link rel="stylesheet" href="/assets/css/fonts.css?v={{revision}}">
-    <link rel="stylesheet" href="/assets/css/hotel/hotel.css?v={{revision}}">
+    <link rel="icon" href="{{path}}/assets/images/favicon.ico">
+    <link rel="stylesheet" type="text/css" href="{{path}}/assets/css/hotel/hotel.css?v={{revision}}">
+    <link rel="stylesheet" type="text/css" href="{{path}}/assets/css/hotel/hotelview.css?v={{revision}}">
 
-    <!-- Scripts -->
-    <script src="/assets/js/jquery-3.2.1.min.js?v={{revision}}"></script>
-    <script src="/assets/js/jquery-ui.min.js?v={{revision}}"></script>
-  
-    <script>
-    var Site = {
-        name: "{{site.sitename}}",
-        url: "{{site.domain}}",
-        game_url: "{{site.cpath}}",
-        figure_url: "{{site.fpath}}"
-    }
+    <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script type="text/javascript" src="{{path}}/assets/js/hotel/swflobject.js?v={{revision}}"></script>
 
-    {% if player %}
-        var Client = {{client|json_encode(constant('JSON_PRETTY_PRINT'))|raw}}
-    {% endif %}
-
-    {% if player is empty %}
-    var User = {
-        id: 0,
-        username: "",
-        online: 0,
-        is_logged: false,
-        is_staff: false
-    }
-    {% else %}var User = {
-        id: {{player.id}},
-        username: "{{player.username}}",
-        is_logged: true,
-        ticket: "{{player.auth_ticket}}",
-        is_staff: {% if player.rank >= 3 %}true{% else %}false{% endif %}
-
-    };
-    {% endif %}
-
-    var Configuration = {
-        {% if publickey is not empty %}recaptcha_public: "{{publickey}}",{% endif %}
-        revision: "{{revision}}2213",
-        cache: "AEEA19MN001C",
-    }
+    <script type="text/javascript">
+       var flashvars = {
+          "client.allow.cross.domain": "1",
+          "client.notify.cross.domain": "0",
+          "connection.info.host": "{{client.client_host}}",
+          "connection.info.port": "{{client.client_port}}",
+          "site.url": "{{site.path}}",
+          "url.prefix": "{{site.path}}",
+          "client.reload.url": "{{site.path}}/home",
+          "client.fatal.error.url": "{{site.path}}/home",
+          "client.connection.failed.url": "{{site.path}}/home",
+          "external.override.texts.txt": "{{site.cpath}}/{{client.external_override_texts}}",
+          "external.override.variables.txt": "{{site.cpath}}/{{client.external_override_variables}}",
+          "external.variables.txt": "{{site.cpath}}/{{client.external_variables}}",
+          "external.texts.txt": "{{site.cpath}}/{{client.external_texts}}",
+          "external.figurepartlist.txt": "{{site.cpath}}/{{client.external_figurepartlist}}",
+          "flash.dynamic.avatar.download.configuration": "{{site.cpath}}/{{client.external_figuremap}}",
+          "productdata.load.url": "{{site.cpath}}/{{client.external_productdata}}",
+          "furnidata.load.url": "{{site.cpath}}/{{client.external_figuredata}}",
+          "sso.ticket": "{{data.auth_ticket}}",
+          "account_id": "{{player.id}}",
+          "ads.domain": "",
+          "processlog.enabled": "1",
+          "flash.client.url": "{{site.cpath}}/{{client.external_base}}/",
+          "flash.client.origin": "popup"
+        };
     </script>
+    <script type="text/javascript" src="{{path}}/assets/js/hotel/hotelapi.js?v={{revision}}"></script>
+    <script type="text/javascript">
+        var params = {
+            "base": "{{site.cpath}}/{{client.external_base}}/",
+            "allowScriptAccess": "always",
+            "menu": "false",
+            "wmode": "opaque"
+        };
+
+        window.FlashExternalInterface.logout = function() {
+            var signoutUrl = "{{path}}/logout";
+
+            if (window.opener)
+            {
+                window.opener.location = signoutUrl;
+                window.close();
+            } else
+                window.location = signoutUrl;
+        };
+
+        swfobject.embedSWF('{{site.cpath}}/{{client.external_base}}/{{client.client_swf}}', 'flash-container', '100%', '100%', '11.1.0', '{{path}}/assets/flash/expressInstall.swf', flashvars, params, null, null);
+    </script>
+
+    <style>body{margin:0;background:#000;color:#7ecaee;display:-ms-flexbox;display:flex;-ms-flex-direction:column;flex-direction:column;font-family:Ubuntu,"Trebuchet MS","Lucida Grande","Lucida Sans Unicode","Lucida Sans",Tahoma,sans-serif;font-size:16px;font-variant-ligatures:common-ligatures;line-height:1.4;min-height:100vh;}.client-error{max-width:480px;}.client-error__title{text-align:center;}.client-error__flash{background-image:url('/web/client/flash/flashplayer.png');display:inline-block;height:39px;margin:12px 12px 0;width:158px;}h1,h2,h3,h4,h5,h6{color:#fff;font-family:"Ubuntu Condensed","Trebuchet MS","Lucida Grande","Lucida Sans Unicode","Lucida Sans",Tahoma,sans-serif;font-weight:400;margin:.6em 0;line-height:1.2;}h1,h2,h3,h4,h5{text-transform:uppercase;}p{margin:.75em 0;}a{color:#fff;cursor:pointer;outline:0;text-decoration:none;}</style>
 </head>
-<body>
-    <div class="loading-container">
-        <div id="loading-background" style="background: linear-gradient(-45deg, #000, #000, #000, #000);"></div>
-        <div class="loading-content">
-            <div class="loading-bodytext">
-                {{site.shortname}} is loading...
+
+<body id="client" class="flashclient">
+<div id="client-ui">
+    <div id="flash-wrapper">
+        <div id="flash-container">
+            <div id="content" style="width: 45%;margin: 0px auto 0px;display: none">
+                <div class="client-error">
+                    <div style="margin-top:170px;">
+                        <div class="client-error__background-frank" ng-if="!ClientErrorController.mobile">
+                            <span class="client-error__text-contents">
+                                <h1 class="client-error__title" translate="CLIENT_ERROR_TITLE">Je bent bijna in {{hotelname}}!</h1>
+                                <p translate="CLIENT_ERROR_FLASH"><b>LET OP GOOGLE CHROME USERS</b>! Voordat je {{hotelname}} speelt, zul je Flash Player handmatig moeten aanzetten in de instellingen van je browser. <a href="{{path}}/article/90-activeer-flash-player-in-google-chrome" target="_blank">Lees ons recente nieuwsbericht</a> om te zien hoe je dit precies moet doen.  Nadat Flash is ingeschakeld, klik je op de gele Hotel knop hieronder en vervolgens klik je op "Flash uitvoeren" waarneer hier om gevraagd wordt!</p>
+                            </span>
+                            <div class="client-error__hotel-button-div">
+                                <a ng-href="http://www.adobe.com/go/getflashplayer" target="_blank" rel="noopener noreferrer" class="hotel-button" href="http://www.adobe.com/go/getflashplayer">
+                                    <span class="hotel-button__text" translate="NAVIGATION_HOTEL">Hotel</span>
+                                </a>
+                            </div>
+                            <div class="client-error__mobile">
+                                <p translate="CLIENT_ERROR_MOBILE">Als je op een iPad, iPhone of een Android-apparaat bent, kun je <a href="https://itunes.apple.com/nl/app/puffin-web-browser/id472937654?mt=8">Puffin</a> downloaden in de App Store of <a href="https://play.google.com/store/apps/details?id=com.cloudmosa.puffinFree&hl=nl">Puffin</a> op Google Play.</p>
+
+                                <div class="client-error__downloads">
+                                    <a ng-href="https://itunes.apple.com/nl/app/puffin-web-browser/id472937654?mt=8" target="_blank" rel="noopener noreferrer" class="client-error__appstore" href="https://itunes.apple.com/nl/app/puffin-web-browser/id472937654?mt=8"></a>
+                                    <a ng-href="https://play.google.com/store/apps/details?id=com.cloudmosa.puffinFree&hl=nl" target="_blank" rel="noopener noreferrer" class="client-error__googleplay" href="https://play.google.com/store/apps/details?id=com.cloudmosa.puffinFree&hl=nl"></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
+            <script type="text/javascript">
+                $('#content').show();
+            </script>
         </div>
     </div>
 
-    <div id="client-ui">
-        <div id="flash-wrapper">
-            <div id="flash-container">
-                <noscript>
-                    <style>
-                        .loading-container {
-                            display: none;
-                        }
-                    </style>
-
-                    <object width="100%" height="100%" id="flash-container" type="application/x-shockwave-flash" style="visibility: visible;">
-                        <param name="allowScriptAccess" value="always">
-                        <param name="menu" value="false">
-                        <param name="wmode" value="opaque">
-                        <param name="flashvars" value="client.allow.cross.domain=1&amp;client.notify.cross.domain=0&amp;connection.info.host=193.70.80.164&amp;connection.info.port=30000,843&amp;site.url=https://www.leet.ws&amp;url.prefix=https://www.leet.ws&amp;client.reload.url=//leet.ws/client?e&amp;client.fatal.error.url=//leet.ws/client?e&amp;client.connection.failed.url=//leet.ws/client?e&amp;external.hash=&amp;external.variables.txt=https://images.leet.ws/library/gamedata/external_variables.txt&amp;productdata.load.url=https://images.leet.ws/library/gamedata/productdata.txt&amp;furnidata.load.url=https://images.leet.ws/library/gamedata/furnidata.xml&amp;external.figurepartlist.txt=https://images.leet.ws/library/gamedata/figuredata.xml&amp;flash.dynamic.avatar.download.configuration=https://images.leet.ws/library/gamedata/figuremap.xml&amp;external.texts.txt=https://images.leet.ws/library/gamedata/external_flash_texts.txt&amp;external.override.texts.txt=https://images.leet.ws/library/gamedata/override/external_flash_texts.txt&amp;external.override.variables.txt=https://images.leet.ws/library/gamedata/override/external_variables.txt&amp;use.sso.ticket=1&amp;sso.ticket={{player.auth_ticket}}&amp;processlog.enabled=0&amp;account_id={{player.id}}&amp;client.starting=Leet is aan het laden...&amp;flash.client.url=https://images.leet.ws/library/&amp;user.hash=&amp;has.identity=0&amp;flash.client.origin=popup">
-                    </object>
-                </noscript>
-            </div>
-        </div>
-    </div>
-
-    <script>
-        var hide_flash_missing = false;
-    </script>
-    
-    <script src="/assets/js/web/web.locale.js?v={{revision}}"></script>
-    <script src="/assets/js/functions.js?v={{revision}}"></script>
-    <script src="/assets/js/hotel/swfobject.js?v={{revision}}"></script>
-    <script src="/assets/js/jquery.scrollbar.js?v={{revision}}"></script>
-    <script src="/assets/js/selectric.js?v={{revision}}"></script>
-    <script src="/assets/js/range-slider.js?v={{revision}}"></script>
-    <script src="/assets/js/moment.js?v={{revision}}"></script>
-    <script src="/assets/js/functions.js?v={{revision}}"></script>
-    <script src="/assets/js/particles.min.js?v={{revision}}"></script>
-    <script src="/assets/js/hotel/hotel.js?v={{date().timestamp}}"></script>
-  
-    <script>
-    </script>
+    <iframe id="page-content" class="hidden" allowtransparency="true" frameBorder="0" src="about:blank"></iframe>
+</div>
 </body>
 </html>
-{% endif %}
