--- a/Cosmic/App/View/Client/client.html
+++ b/Cosmic/App/View/Client/client.html
@@ -21,8 +21,8 @@
           "client.reload.url": "{{site.path}}/home",
           "client.fatal.error.url": "{{site.path}}/home",
           "client.connection.failed.url": "{{site.path}}/home",
-          "external.override.texts.txt": "{{site.cpath}}/{{client.external_override_texts}}",
-          "external.override.variables.txt": "{{site.cpath}}/{{client.external_override_variables}}",
+          "external.override.texts.txt": "{{site.cpath}}/{{client.external_override_variables}}",
+          "external.override.variables.txt": "{{site.cpath}}/{{client.external_override_texts}}",
           "external.variables.txt": "{{site.cpath}}/{{client.external_variables}}",
           "external.texts.txt": "{{site.cpath}}/{{client.external_texts}}",
           "external.figurepartlist.txt": "{{site.cpath}}/{{client.external_figurepartlist}}",
