add starting text client

--- a/Cosmic/App/View/Client/client.html
+++ b/Cosmic/App/View/Client/client.html
@@ -31,6 +31,7 @@
           "furnidata.load.url": "{{site.cpath}}/{{client.external_figuredata}}",
           "sso.ticket": "{{data.auth_ticket}}",
           "account_id": "{{player.id}}",
+          "client.starting": "Hotel starting..",
           "ads.domain": "",
           "processlog.enabled": "0",
           "flash.client.url": "{{site.cpath}}/{{client.external_base}}/",
