--- a/Cosmic/App/View/Admin/base.html
+++ b/Cosmic/App/View/Admin/base.html
@@ -38,7 +38,38 @@
    <link href="/assets/admin/css/wizard.css" rel="stylesheet" type="text/css" />
    <link href="/assets/admin/vendors/css/jstree.bundle.css" rel="stylesheet" type="text/css" />
 
-    <script src="/assets/js/web/user_settings.js" type="text/javascript"></script>
+   <script>
+    var Site = {
+        name: "{{site.sitename}}",
+        url: "{{site.domain}}",
+        game_url: "{{site.cpath}}",
+        figure_url: "{{site.fpath}}"
+    }
+    
+    {% if player is empty %}
+    var User = {
+        id: 0,
+        username: "",
+        online: 0,
+        is_logged: false,
+        is_staff: false
+    }
+    {% else %}var User = {
+        id: {{player.id}},
+        username: "{{player.username}}",
+        is_logged: true,
+        ticket: "{{player.auth_ticket}}",
+        is_staff: {% if player.rank >= 3 %}true{% else %}false{% endif %}
+
+    };
+    {% endif %}
+
+    var Configuration = {
+        {% if publickey is not empty %}recaptcha_public: "{{publickey}}",{% endif %}
+        revision: "{{revision}}2213",
+        cache: "AEEA19MN001C",
+    }
+    </script>
   
    <script>if (typeof module === 'object') {window.module = module; module = undefined;}</script>
 </head>
