Removed misplaced "Leet" reference

--- a/Cosmic/App/View/Admin/base.html
+++ b/Cosmic/App/View/Admin/base.html
@@ -6,7 +6,7 @@
 <html lang="en" >
 <head>
    <meta charset="utf-8"/>
-   <title>{% if block('page') is defined  %} {{block('page')}} | {{site.sitename}}{% else %}Leet | Housekeeping{% endif %}</title>
+   <title>{% if block('page') is defined  %} {{block('page')}} | {{site.sitename}}{% else %}Housekeeping{% endif %}</title>
    <meta name="description" content="Content width content">
    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
