--- a/Cosmic/public/assets/css/web.dark.css
+++ b/Cosmic/public/assets/css/web.dark.css
@@ -2571,7 +2571,7 @@ input:-webkit-autofill {
 
 .page-container[data-page="home"] .page-content article.default-section.profile-section .header-image {
     border-radius: 50%;
-    background-color: #02353c;
+    background-color: #1c1c1a;
     border: none;
     color: white;
     padding: 20px;
