--- a/Cosmic/public/assets/css/web.dark.css
+++ b/Cosmic/public/assets/css/web.dark.css
@@ -983,6 +983,7 @@ input:-webkit-autofill {
 
 .login-popup h3 {
     margin-bottom: 30px;
+    color: #4e4e4e;
 }
 
 .login-popup .login-form .username-input,
@@ -1553,6 +1554,7 @@ input:-webkit-autofill {
 .notifications-container .notification-container .notification-content {
     font-size: 12px;
     word-break: break-word;
+    color: #4e4e4e;
 }
 
 /* Cookies */
