--- a/Cosmic/App/View/Help/help.html
+++ b/Cosmic/App/View/Help/help.html
@@ -11,8 +11,7 @@
             <div class="left-side">
                 <article class="default-section">
                   
-                    <div class="aside-title-content">{{locale.help_title}}</div>
-                    <div class="aside-desc-content">{{locale.help_label}}</div>
+                    <h3 class="aside-title">{{locale.help_title}}</h3>
                   
                     <div class="aside-content">
                         <img src="/assets/images/web/pages/help/frank.gif" style="float:right">
@@ -36,8 +35,8 @@
                 </article>
             </div>
             <div class="right-side">
-                <aside class="default-section">
-                    <div class="aside-title-content">{{locale.help_other_questions}}</div>
+                <aside class="default-section"> 
+                    <h3 class="aside-title">{{locale.help_other_questions}}</h3>
                     <div class="aside-content">
                         <p>{{locale.help_content_1}}</p>
                         <p style="text-align: center;"><a href="/help/requests/new" class="rounded-button blue">{{locale.help_contact}}</a></p>
