--- a/Cosmic/App/View/Help/new.html
+++ b/Cosmic/App/View/Help/new.html
@@ -8,7 +8,7 @@
         </header>
         <div class="page-content">
             <article class="default-section new-request-container">
-                <div class="aside-title-content">{{locale.title}}</div>
+                <h3 class="aside-title">{{locale.title}}</h3>
                 <div class="aside-content">
                 <form action="help/requests/create" method="post">
                     <div class="row space-bottom">
