--- a/Cosmic/App/View/Home/registration.html
+++ b/Cosmic/App/View/Home/registration.html
@@ -12,7 +12,7 @@
                     <form action="home/registration/request" method="post" class="registration-form">
                     <div class="sides-container">
                         <div class="content-side" style="padding: 18px">
-                            <div class="aside-title-content" style="padding: 0px;padding-bottom: 15px;">{{locale.title}}</div>
+                            <h3 class="aside-title">{{locale.title}}</h3>
                             <div class="row">
                                 <h5>{{locale.email}}</h5>
                                 <input type="email" name="email" class="rounded-input blue-active" placeholder="{{locale.email_fill}}" autocomplete="off" autofocus required>
@@ -167,7 +167,7 @@
                             {% endif %}
                         </div>
                         <div class="content-side" style="padding: 18px;">
-                            <div class="aside-title-content" style="padding: 0px;padding-bottom: 15px;">{{locale.create_user}}</div>
+                            <h3 class="aside-title">{{locale.create_user}}</h3>
                             <div class="row">
                                 <h5>{{locale.username}}</h5>
                                 <input type="text" name="username" class="rounded-input blue-active username" placeholder="{{locale.username_fill}}" maxlength="15" autocomplete="off" required>
