--- a/Cosmic/App/View/Shop/draw.html
+++ b/Cosmic/App/View/Shop/draw.html
@@ -11,7 +11,7 @@
 <div class="page-content">
    <div class="left-side">
       <article class="default-section" style="min-height: 456px;">
-         <div class="aside-title-content">Draw something</div>
+         <h3 class="aside-title">Draw something</h3>
          <div class="aside-content">
             <div id="avatarbox">
                <div class="uusername" style="font-size: 12px;margin-top: 13px;margin-left: 30px;color: #FFF;">{{player.username}}</div>
@@ -94,7 +94,7 @@
    </div>
    <div class="right-side">
       <aside class="default-section">
-         <div class="aside-title-content">Draw tools</div>
+         <h3 class="aside-title">Draw tools</h3>
          <div class="aside-content">
             <div class="clearfix">
                <div class="menu-container" >
