--- a/Cosmic/App/View/Shop/shop.html
+++ b/Cosmic/App/View/Shop/shop.html
@@ -11,7 +11,7 @@
 <div class="page-content">
     <div class="left-side">
         <article class="default-section">
-            <div class="aside-title-content">{{locale.title}}</div>
+            <h3 class="aside-title">{{locale.title}}</h3>
             <div class="filter-container">
             </div>
 
@@ -46,7 +46,7 @@
             {% endfor %}
         </div>
         <aside class="default-section">
-            <div class="aside-title-content">{{locale.more_information}}</div>
+            <h3 class="aside-title">{{locale.more_information}}</h3>
             <div class="aside-content">
                 <p>{{locale.content_1}} {{locale.content_2}} <a href="/help/requests/new">{{locale.help_tool}}</a>.</p>
             </div>
