--- a/Cosmic/App/View/Home/home.html
+++ b/Cosmic/App/View/Home/home.html
@@ -1,6 +1,11 @@
 {% extends "base.html" %}
 {% block body %}
-
+        <header class="page-header flex-container flex-vertical-center">
+            <div class="page-header-content">
+                <h1>Welcome to our Hotel!</h1>
+                Be aware of the events we organize and the updates we report.
+            </div>
+        </header>
         <div class="page-content">
           
             {% if player %}
@@ -30,16 +35,8 @@
                     </div>
                 </article>
               
-                <div class="myfriends-online">
-                    <button id="copyReferral" class="form-control" style="width:120px;color: #fff;background-color: #5cb85c;border-color: #4cae4c;margin-right:5px">Referral</button>
-                    <input type="text" value="https://{{site.domain}}/registration/{{player.username}}" id="getReferral" class="form-control" style="width: 450px" autocomplete="off" required>
-                </div>
-              
                 <aside class="default-section">
-                  
-                    <div class="aside-title-content">{{locale.popular_rooms}}</div>
-                    <div class="aside-desc-content">{{locale.popular_rooms_label}}</div>
-                  
+                    <h3 class="aside-title">{{locale.popular_rooms}}</h3>
                     {% if rooms is empty %}
                         <div class="aside-content">
                             {{locale.popular_no_rooms}}
@@ -80,7 +77,7 @@
               {% if player %}
                 {% if data.friends is not empty %}
                 <article class="default-section">
-                    <div class="aside-title-content">{{locale.friends_online}}</div>
+                    <h3 class="aside-title">{{locale.friends_online}}</h3>
                     <div class="aside-content">
                         {% for friends in data.friends %}
                         <div class="friends-container">
@@ -99,8 +96,7 @@
           
             <div class="right-side">
                 <article class="default-section">
-                    <div class="aside-title-content">{{locale.latest_news}}</div>
-                    <div class="aside-desc-content">{{locale.latest_facts}}</div>  
+                    <h3 class="aside-title">{{locale.latest_news}}</h3>
                     <div class="aside-content">
                         <div class="related-articles-container">
                             {% for news in news %}
@@ -115,28 +111,24 @@
                         </div>
                     </div>
                 </article>
-            </div>
             {% endif %}
           
             {% if player %}
-            <div class="right-side" style="margin-bottom: 7px;">
                 <aside class="default-section">
-                    <div class="aside-title-content">{{locale.popular_groups}}</div>
-                    <div class="aside-desc-content">{{locale.popular_groups_label}}</div>
+                    <h3 class="aside-title">{{locale.popular_groups}}</h3>
                     <div class="aside-content">
                         {% if groups is empty %}
                             {{locale.popular_no_groups}}
                         {% endif %}
                         {% for row in groups %}
-                            <div id="popularGroups" style="background: url('{{site.cpath}}/c_images/Badgeparts/generated/{{row.badge}}.png') 10px 50% no-repeat {% if player.template == "dark"%}#2f2f2f{% endif %}"><div class="countGroupMembers">{{row.Total}}</div><div class="groupName">{{row.name}}</div><div class="groupDesc">{{row.description}}</div></div>
+                            <div id="popularGroups" style="background: url('{{site.imaging}}/{{row.badge}}.png') 10px 50% no-repeat {% if player.template == "dark"%}#2f2f2f{% endif %}"><div class="countGroupMembers">{{row.Total}}</div><div class="groupName">{{row.name}}</div><div class="groupDesc">{{row.description}}</div></div>
                         {% endfor %}
                     </div>
                 </aside>
               
                 {% if oftw is not empty %}
                     <aside class="default-section">
-                        <div class="aside-title-content">{{locale.user_of_the_week}}</div>
-                        <div class="aside-desc-content">{{locale.user_of_the_week_label}}</div>
+                        <h3 class="aside-title">{{locale.user_of_the_week}}</h3>
                         <div class="aside-content">
                             <div class="flex-container flex-vertical-center">
                                 <div class="user_of_the_week">
