--- a/Cosmic/App/View/Home/profile.html
+++ b/Cosmic/App/View/Home/profile.html
@@ -44,6 +44,7 @@
 
         <div class="guestbook"></div>
         <article class="default-section">
+            <h3 class="aside-title">{{article.title}}</h3>
             <div class="aside-title-content">
                 {{locale.guestbook_title}}
             </div>
@@ -104,9 +105,7 @@
     <div class="left-side">
         <div class="badges"></div>
         <article class="default-section" data-section="badges">
-            <div class="aside-title-content">
-                {{locale.badges_title}}
-            </div>
+            <h3 class="aside-title">{{locale.badges_title}}</h3>
             <div class="aside-desc-content">{{locale.badges_label}}</div>
             <div class="aside-content">
                 <div class="items-container">
@@ -125,9 +124,7 @@
 
         <div class="friends"></div>
         <article class="default-section" data-section="friends">
-              <div class="aside-title-content">
-                {{locale.friends_title}}
-            </div>
+              <h3 class="aside-title">{{locale.friends_title}}/h3>
             <div class="aside-desc-content">{{locale.friends_label}}</div>
             <div class="aside-content">
                 <div class="items-container">
@@ -147,9 +144,7 @@
 
         <div class="groups"></div>
         <article class="default-section" data-section="groups">
-            <div class="aside-title-content">
-                {{locale.groups_title}}
-            </div>
+            <h3 class="aside-title">{{locale.groups_title}}</h3>
             <div class="aside-desc-content">{{locale.groups_label}}</div>
             <div class="aside-content">
                 <div class="items-container">
@@ -169,9 +164,7 @@
 
         <div class="rooms"></div>
         <article class="default-section" data-section="rooms">
-            <div class="aside-title-content">
-                {{locale.rooms_title}}
-            </div>
+            <h3 class="aside-title">{{locale.rooms_title}}</h3>
             <div class="aside-desc-content">{{locale.rooms_label}}</div>
             <div class="aside-content">
                 <div class="items-container">
@@ -191,9 +184,7 @@
         
         <div class="photos"></div>
         <article class="default-section" data-section="photos">
-            <div class="aside-title-content">
-                {{locale.photos_title}}
-            </div>
+            <h3 class="aside-title">{{locale.photos_title}}</h3>
             <div class="aside-desc-content">{{locale.photos_label}}</div>
                 <div class="aside-content">
                 <div class="items-container">
