--- a/Cosmic/App/View/Home/profile.html
+++ b/Cosmic/App/View/Home/profile.html
@@ -44,10 +44,7 @@
 
         <div class="guestbook"></div>
         <article class="default-section">
-            <h3 class="aside-title">{{article.title}}</h3>
-            <div class="aside-title-content">
-                {{locale.guestbook_title}}
-            </div>
+            <h3 class="aside-title">{{locale.guestbook_title}}</h3>
             <div class="aside-desc-content">{{locale.guestbook_label}}</div>
             <div class="aside-content">
             {% if player %}
@@ -124,7 +121,7 @@
 
         <div class="friends"></div>
         <article class="default-section" data-section="friends">
-              <h3 class="aside-title">{{locale.friends_title}}/h3>
+              <h3 class="aside-title">{{locale.friends_title}}</h3>
             <div class="aside-desc-content">{{locale.friends_label}}</div>
             <div class="aside-content">
                 <div class="items-container">
