--- a/Cosmic/App/View/base.html
+++ b/Cosmic/App/View/base.html
@@ -28,10 +28,10 @@
     <link rel="stylesheet" href="/assets/css/fonts.css">
     <link rel="stylesheet" href="/assets/css/flaticon.css">
     <link rel="stylesheet" href="/assets/css/magnific-popup.css">
-    <link rel="stylesheet" href="/assets/css/homes.css?v=882222">
+    <link rel="stylesheet" href="/assets/css/homes.css">
     <link rel="stylesheet" href="/assets/css/selectric.css">
     <link rel="stylesheet" href="/assets/css/circle.css?v=5">
-    <link rel="stylesheet" href="/assets/css/web.{% if player %}{{player.template}}{% else %}{% if template %}{{template}}{% else %}light{% endif %}{% endif %}.css?v=42">
+    <link rel="stylesheet" href="/assets/css/web.{% if player %}{{player.template}}{% else %}{% if template %}{{template}}{% else %}light{% endif %}{% endif %}.css?v=2">
     <link rel="stylesheet" href="/assets/css/web.responsive.css">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -304,7 +304,7 @@
     <script src="/assets/js/jquery.magnific-popup.js"></script>
     <script src="/assets/js/selectric.js?v=3412"></script>
     <script src="/assets/js/functions.js"></script>
-    <script src="/assets/js/web/loading.js?v={{date().timestamp}}"></script>
+    <script src="/assets/js/web/loading.js?v=2"></script>
     <script src="/assets/js/pagination.js"></script>
     <script src="/assets/js/jquery.wysibb.js"></script>
   
